Prevent tooltips to wrap to next line without input fields

--- a/gitb-ui/ui/src/styles/less/app.less
+++ b/gitb-ui/ui/src/styles/less/app.less
@@ -954,3 +954,9 @@ span.mini-tab, div.mini-tab {
     }
 }
 // HugeRTE override styles - END
+.itb-body {
+    .row {
+        // Disable row wrapping so that tooltips stay on the same line with the input field.
+        flex-wrap: nowrap;
+    }
+}
